[feature][cli] Pulsar shell - non interactive mode - part 3 (#16268)
* [feature][cli] Pulsar shell - add support for input files and pipe for running multiple commands - part 2

* [feature][cli] Pulsar shell - Env variables interpolation

* Pulsar Shell: fix sh command and better error message for non-interactive mode failures

* Add commons-text to LICENSE